// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SOAP Envelope Builders > buildSoapEnvelope (NFeAutorizacao4) > should match snapshot 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<soap12:Envelope xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:soap12="http://www.w3.org/2003/05/soap-envelope">
  <soap12:Body>
    <nfeDadosMsg xmlns="http://www.portalfiscal.inf.br/nfe/wsdl/NFeAutorizacao4">
      <enviNFe versao="4.00"><idLote>202601160001</idLote><indSinc>1</indSinc></enviNFe>
    </nfeDadosMsg>
  </soap12:Body>
</soap12:Envelope>"
`;

exports[`SOAP Envelope Builders > buildSoapEnvelopeRet (NFeRetAutorizacao4) > should match snapshot 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<soap12:Envelope xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:soap12="http://www.w3.org/2003/05/soap-envelope">
  <soap12:Body>
    <nfeDadosMsg xmlns="http://www.portalfiscal.inf.br/nfe/wsdl/NFeRetAutorizacao4">
      <consReciNFe versao="4.00"><tpAmb>2</tpAmb><nRec>351000000000123</nRec></consReciNFe>
    </nfeDadosMsg>
  </soap12:Body>
</soap12:Envelope>"
`;
